Updated style and added text, link
Changed styling for the "Current Location" button and added "OR" to highlight user has option to search or use GPS location. Added link to github repo and text underneath the project.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
             What's the Weather?
         </h1>
         <hr />
-        <form id="enter-city-form" autocomplete="off">
+        <form id="enter-city-form">
             <div class="mb-3">
                 <input type="text" class="form-control" id="input-city" placeholder="Enter a city" />
             </div>
-            <button type="submit">Search</button>
-            <button id="gps-location">Current Location</button>
+            <button type="submit">Search</button> <div id="or">OR</div> <button id="gps-location">Current Location</button>
         </form>
         <hr />
         <h2>
@@ -78,5 +77,8 @@
         </div>
         <hr />
     </div>
+    <p id="github-link">
+        <a href="https://github.com/pengallow/weather-app" target="_blank">Open-source code</a> by Chelsea Ellorin
+    </p>
 </body>
 </html>
