--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="src/stylesheet.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/46d1544063.js" crossorigin="anonymous"></script>
     <script src="src/script.js" defer></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
@@ -30,15 +29,14 @@
         <h2>
             <div class="row">
                 <div class="col-6 current-city" id="target-city">Please enter a city</div>
-                <div class="col-6" id="date-time">
-                    <span id="weekday">Monday</span> <span id="time">18:00</span>
-                </div>
+                <div class="col-6 current-weather"></div>
+                
             </div>
             <div class="row">
                 <div class="col-6 current-temperature" id="search-temperature">
                     ---
                 </div>
-                <div class="col-6 current-weather"><i class="fas fa-wind"></i></div>
+                
             </div>
             <div class="row">
                 <div class="col-6">
@@ -46,35 +44,11 @@
                         <span id="celsius">ºC</span> | <span id="farenheit">ºF</span>
                     </p>
                 </div>
+                <div class="col-6" id="date-time">
+                    <span id="weekday">Last Updated </span>
+                </div>
             </div>
         </h2>
-        <hr />
-        <h3>
-            5-Day Forecast
-        </h3>
-        <h5>
-            <div class="row justify-content-center" id="day">
-                <div class="col-2">Mon</div>
-                <div class="col-2">Tues</div>
-                <div class="col-2">Wed</div>
-                <div class="col-2">Thurs</div>
-                <div class="col-2">Fri</div>
-            </div>
-        </h5>
-        <div class="row justify-content-center" id="weather">
-            <div class="col-2"><i class="fas fa-cloud-sun-rain"></i></div>
-            <div class="col-2"><i class="fas fa-cloud"></i></div>
-            <div class="col-2"><i class="far fa-sun"></i></div>
-            <div class="col-2"><i class="fas fa-cloud-sun"></i></div>
-            <div class="col-2"><i class="fas fa-cloud-rain"></i></div>
-        </div>
-        <div class="row justify-content-center" id="forecast">
-            <div class="col-2">49º / 36º</div>
-            <div class="col-2">57º / 44º</div>
-            <div class="col-2">50º / 37º</div>
-            <div class="col-2">41º / 29º</div>
-            <div class="col-2">40º / 29º</div>
-        </div>
         <hr />
     </div>
     <p id="github-link">
