Added forecast section to HTML. Added forecast JS to search and current location. Added CSS to the forecast.

--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
                         <span id="celsius"><a href="#" id="celsius-link" class="active">ºC</a></span> | <span id="farenheit"><a href="#" id="fahrenheit-link">ºF</a></span>
                     </p>
                 </div>
-                <div class="col-4 precipitation">
-                    Precipitation: <span id="precipitation-amount"></span>
+                <div class="col-4 humidity">
+                    Humidity: <span id="humidity-percent"></span>
                 </div>
             </div>
         </h2>
         <hr />
+        <div class="row">
+            <h1>3-Hour Forecast</h1>
+        </div>
+        <div class="row weather-forecast" id="forecast"></div>
     </div>
     <p id="github-link">
         <a href="https://github.com/pengallow/weather-app" target="_blank">Open-source code</a> by Chelsea Ellorin
